restructure into days

--- a/day-1/uninstall-multi-packages.yml
+++ b/day-1/uninstall-multi-packages.yml
@@ -9,4 +9,9 @@
          - git
          - firefox
          - notepadplusplus
+        pinned: no
         state: absent
+      register: pack
+
+    - debug:
+        var: pack
